# tauri-ahq-store

./: .gitignore  .pnp.cjs  LICENSE  LICENSE.md  README.md  SECURITY.md  commit.ps1  components.json  encryptor.cjs  encryptor.js  eslint.config.js  firebase.json  function_to_encrypt.cjs  index.html  latest.md  launch.ps1  linux.sh  loadFiles.js  myapp.key.pub  package.json  pnpm-lock.yaml  postcss.config.cjs  rsbuild.config.ts  tailwind.config.cjs  tailwind.config.js  tsconfig.json  update.ps1  vite.config.ts  vuln.ps1
.github/: dependabot.yml
ahqstore-types/: Cargo.toml  README.md
ahqstore-types/src/: lib.rs
ahqstore-types/src/api/: internet.rs  mod.rs
ahqstore-types/src/app/: install.rs  mod.rs  other_fields.rs
ahqstore-types/src/data/: mod.rs
api/: index.html
app/: globals.css
docs-alpha/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.cjs
docs-next/: build.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
docs-old/: .firebaserc  README.md  package.json  tailwind.config.js
src-ahqstore-types/: Cargo.toml  README.md
src-ahqstore-types/js_macros/: Cargo.toml
src-ahqstore-types/js_macros/src/: lib.rs
src-ahqstore-types/src/: lib.rs
src-ahqstore-types/src/api/: ahqstore.rs  flatpak.rs  internet.rs  methods.rs  mod.rs  search.rs  winget.rs
src-ahqstore-types/src/app/: install.rs  mod.rs  other_fields.rs
src-ahqstore-types/src/data/: mod.rs
src-ahqstore-types/src/winget/: mod.rs
src-service/: Cargo.toml  build.ps1  build.sh  stop
src-service-alpha/: Cargo.toml  build.ps1  start
src-service-alpha/src/: authentication.rs  main.rs  ws_handler.rs
src-service-alpha/src/encryption/: cache.rs  mod.rs
src-service-alpha/src/handlers/: mod.rs
src-service-alpha/src/handlers/service/: http.rs  mod.rs
src-service-alpha/src/utils/: db.rs  log_file.rs  mod.rs  structs.rs
src-service-old/: Cargo.toml  LICENSE.md
src-service-old/src/: ws_receiver.rs
src-service-old/src/app/daemon/: get_commit.rs  mod.rs  preferences.rs
src-service-old/src/app/daemon/app_manager/: check_for_updates.rs  get_app.rs  install_app.rs  list_apps.rs  mod.rs  uninstall.rs  util.rs
src-service-old/src/app/daemon/app_manager/install_app_helpers/: deploy_zip.rs  install_app.rs
src-service-old/src/auth/: mod.rs
src-service-tools/: Cargo.toml  build.rs
src-service-tools/_old/: Cargo.toml
src-service-tools/_old/src/: download.rs  main.rs  powershell.rs  shell.rs
src-service-tools/src/: chalk.rs  download.rs  get_release.rs  install.rs  main.rs  powershell.rs  release.rs  shell.rs
src-service/.cargo/: config.toml
src-service/linux-list/: Cargo.toml
src-service/linux-list/src/: main.rs
src-service/src/: authentication.rs  main.rs  ws_handler.rs  ws_receiver.rs
src-service/src/app/: mod.rs
src-service/src/app/daemon/: get_commit.rs  mod.rs  preferences.rs  runner.rs  structs.rs
src-service/src/app/daemon/app_manager/: check_for_updates.rs  download_app.rs  get_app.rs  install_app.rs  list_apps.rs  mod.rs  uninstall.rs  util.rs
src-service/src/app/daemon/app_manager/install_app_helpers/: deploy_zip.rs  downloader.rs  get_app.rs  install_app.rs  mod.rs  shortcut.rs  uninstall.rs
src-service/src/auth/: cache.rs  encrypt  hash  mod.rs
src-service/src/db/: mod.rs
src-service/src/encryption/: encrypt_2  mod.rs
src-service/src/handlers/: daemon.rs  mod.rs
src-service/src/handlers/daemon/: dwn.rs  mod.rs  recv.rs
src-service/src/handlers/service/: http.rs  mod.rs  prefs.rs
src-service/src/handlers/service/linux/: mod.rs
src-service/src/handlers/service/linux/av/: mod.rs  scan.rs  update.rs
src-service/src/handlers/service/win32/: mod.rs
src-service/src/handlers/service/win32/msi/: mod.rs
src-service/src/handlers/service/windows/: mod.rs
src-service/src/handlers/service/windows/av/: mod.rs  scan.rs  update.rs
src-service/src/handlers/service/windows/exe/: mod.rs
src-service/src/handlers/service/windows/msi/: mod.rs
src-service/src/ipc/: linux.rs  mod.rs  win32.rs
src-service/src/linux/: mod.rs
src-service/src/linux/daemon/: mod.rs  worker.rs
src-service/src/linux/utils/: mod.rs
src-service/src/utils/: db.rs  log_file.rs  mod.rs  structs.rs
src-service/src/windows/: authentication.rs  handler.rs  mod.rs  ws_handler.rs  ws_handler_retired.rs
src-service/src/windows/encryption/: cache.rs  mod.rs
src-service/src/windows/handlers/: daemon.rs  mod.rs
src-service/src/windows/handlers/service/: http.rs  mod.rs  prefs.rs
src-service/src/windows/handlers/service/msi/: mod.rs
src-service/src/windows/utils/: db.rs  log_file.rs  mod.rs  structs.rs
src-setup/: Cargo.toml  build.rs  rust-toolchain.toml
src-setup/.cargo/: config.toml
src-setup/src/: elevate.rs  main.rs  structs.rs
src-setup/src/install/: deb.rs  download.rs  fetch.rs  mod.rs  msi.rs  regedit.rs
src-setup/src/linux/: service  sudo.rs
src-setup/src/util/: http.rs  mod.rs  other.rs
src-setup/src/utils/: mod.rs
src-setup/src/windows/: mod.rs
src-setup/ui/: appWindow.slint  installDialog.slint
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: install.wix  install.wxs
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/license/: license.rtf
src-tauri/src/: download.rs  encrypt  encryption.rs  extract.rs  main.rs  rpc.rs  structs.rs  ws.rs
src-tauri/src/app/: download.rs  extract.rs  mod.rs  utils.rs  ws.rs
src-tauri/src/encryption/: cache.rs  mod.rs
src-tauri/src/linux/: mock_ws.rs  mod.rs
src-tauri/src/util/: mod.rs  structs.rs
src-tauri/src/windows/: download.rs  extract.rs  mod.rs  rpc.rs  utils.rs  ws.rs
src-tauri/src/windows/util/: mod.rs  structs.rs
src-updater/: Cargo.toml
src-updater/.cargo/: config.toml
src-updater/src/: check.rs  lib.rs
src-updater/src/platform/: mod.rs
src-updater/src/platform/linux/: mod.rs
src-updater/src/platform/win32/: mod.rs
src-updater/src/platform/windows/: mod.rs
src-updater/test/: Cargo.toml  nohup.out
src-updater/test/src/: main.rs
(+225 files in other folders)
