[package]
name = "ahqstore-types"
description = "Standard types used by AHQ Store"
version = "1.4.0-rc4"
edition = "2021"
license-file = "../LICENSE.md"
repository = "https://www.github.com/ahqsoftwares/tauri-ahq-store"
homepage = "https://ahq-store.web.app"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
reqwest = { version = "0.11.23", features = [
  "json",
  "blocking",
], optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio-tungstenite = "0.21.0"

[features]
default = ["internet"]
internet = ["dep:reqwest", "dep:lazy_static"]
