[package]
name = "ahqstore-types"
description = "Standard types used by AHQ Store"
version = "2.0.1"
edition = "2021"
license-file = "../LICENSE.md"
repository = "https://www.github.com/ahqsoftwares/tauri-ahq-store"
homepage = "https://ahqstore.github.io"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
reqwest = { version = "0.12.4", features = [
  "json",
  "blocking",
], optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[features]
default = ["internet"]
internet = ["dep:reqwest", "dep:lazy_static"]
