[package]
name = "ahqstore_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
sysinfo = "0.29.10"
tokio = "1.32.0"
windows-service = "0.6.0"
