[package]
name = "ahqstore_service"
version = "1.0.0"
description = "AHQ Store on Tauri and Rust"
authors = ["AHQ Store"]
license = "CC BY-NC 3.0"
repository = "https://www.github.com/ahqsoftwares/tauri-ahq-store"
edition = "2021"
rust-version = "1.57"

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
downloader = "0.2.7"
lazy_static = "1.4.0"
mslnk = "0.1.8"
reqwest = {version="0.11.20", features=["json","blocking","stream"]}
serde = {version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
threadpool = "1.8.1"
windows-service = "0.6.0"
ws = "0.9.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true