[package]
name = "store-tools-installer"
version = "1.0.0"
edition = "2021"
authors = ["AHQ Store"]
license = "CC BY-NC 3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader = "0.2.7"
eframe = { version = "0.22.0" }
env_logger = "0.10.0"
is_elevated = "0.1.2"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[build-dependencies]
winres = "0.1.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true