[package]
name = "store-tools-installer"
version = "1.3.6"
edition = "2021"

[dependencies]
chalk_rs = "1.0.1"
is_elevated = "0.1.2"
lazy_static = "1.4.0"
progress_bar = "1.0.5"
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
serde = { version = "1.0.189", features = ["derive"] }

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Install Service Tools for Widows"
LegalCopyright = "Copyright AHQ Store © 2023"
