[package]
name = "ahqstore_service"
version = "2.0.0"
edition = "2021"
license-file = "LICENSE.md"
repository = "https://github.com/ahqsoftwares/tauri-ahq-store"
homepage = "https://ahqstore.github.io/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "*", features = ["json"] }
serde_json = "1.0.117"
sysinfo = "0.30.12"
tokio = { version = "1.38.0", default-features = false, features = [
  "net",
  "rt",
  "time",
] }
ahqstore-types = { path = "../ahqstore-types" }
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
windows-service = "0.7.0"
msi = "0.7.0"
winreg = "0.52.0"
windows = { version = "0.57.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_System_Pipes",
  "Win32_Security",
  "Win32_System_SystemServices",
] }


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
sudo = ["no_service", "no_auth"]
no_service = []
no_auth = []
