[package]
name = "ahqstore_service"
version = "2.0.0"
edition = "2021"
license-file = "LICENSE.md"
repository = "https://github.com/ahqsoftwares/tauri-ahq-store"
homepage = "https://ahqstore.github.io/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
serde_json = "1.0.120"
sysinfo = "0.30.13"
tokio = { version = "1.38.0", default-features = false, features = [
  "net",
  "rt",
  "time",
] }
ahqstore-types = { path = "../src-ahqstore-types" }
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
windows-service = "0.7.0"
msi = "0.7.0"
winreg = "0.52.0"
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_System_Pipes",
  "Win32_Security",
  "Win32_System_SystemServices",
] }


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
sudo = ["no_service", "no_auth"]
no_service = []
no_auth = []
