[package]
name = "ahqstore_setup_amd64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
lazy_static = "1.4.0"
notify-rust = "4.10.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
slint = "1.4.0"

[target.'cfg(windows)'.dependencies]
check_elevation = "0.2.4"

[build-dependencies]
slint-build = "1.4.0"
