[package]
name = "ahqstore_setup_amd64"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/ahqsoftwares/tauri-ahq-store"
homepage = "https://ahqstore.github.io/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
slint = "1.6.0"

[target.'cfg(unix)'.dependencies]
notify-rust = "4.11.0"

[target.'cfg(windows)'.dependencies]
check_elevation = "0.2.4"
winres = "0.1.12"
winreg = "0.52.0"


[build-dependencies]
slint-build = "1.6.0"
