[package]
name = "ahq-store-app"
version = "1.4.1"
description = "AHQ Store on Tauri and Rust"
authors = ["AHQ Softwares@AHQ Store"]
license = "Creative Commons Attribution Non Commercial 3.0"
repository = "https://www.github.com/ahqsoftwares/tauri-ahq-store"
default-run = "ahq-store-app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }

tauri = { version = "2.0.0-beta", features = [
  "wry", "tray-icon", "image-png"
] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
wry = "*"

open = "5.1.0"

reqwest = { version = "*", features = ["blocking", "json"] }
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
lazy_static = "1.4.0"

ahqstore-types = { path = "../ahqstore-types" }
discord-rich-presence = "0.2.3"
tokio = "1.36.0"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-os = "2.0.0-beta"

[target.'cfg(windows)'.dependencies]
windows = { version = "=0.52.0", features = [
  "Win32_System_Com",
  "Win32_Foundation",
  "Win32_UI_Shell",
] }
is_elevated = "0.1.2"
async-recursion = "1.0.5"


[target.'cfg(target_os = "linux")'.dependencies]
whatadistro = "0.1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
