[package]
name = "ahq-store-app"
version = "2.0.0"
description = "AHQ Store on Tauri and Rust"
authors = ["AHQ Softwares@AHQ Store"]
license = "MIT"
repository = "https://github.com/ahqsoftwares/tauri-ahq-store"
homepage = "https://ahqstore.github.io/"
default-run = "ahq-store-app"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

tauri = { version = "2.0.0-rc", features = ["devtools", "wry", "tray-icon", "image-png", "rustls-tls"] }
wry = "*"

open = "5"
reqwest = { version = "*", features = ["blocking", "json", "rustls-tls"] }
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
lazy_static = "1"

updater = { path = "../src-updater" }
discord-rich-presence = "0.2.4"
tokio = "1"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-http = { version = "2.0.0-rc", features = ["rustls-tls"] }
tauri-plugin-fs = "2.0.0-rc.6"
tauri-plugin-process = "2.0.0-rc"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
async-recursion = "1"
bcrypt = "0.15.1"
ahqstore_gh_hash = "1.2.0"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_System_Com",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging",
] }
is_elevated = "0.1.2"

[target.'cfg(target_os = "linux")'.dependencies]
whatadistro = "0.1.0"

[target.'cfg(all(target_os="linux",target_arch="aarch64"))'.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
