cargo-features = ["edition2024"]

[package]
name = "updater"
version = "2.0.0"
edition = "2024"
repository = "https://github.com/ahqsoftwares/tauri-ahq-store"
homepage = "https://ahqstore.github.io/"

[dependencies]
dirs = "*"
lazy_static = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
