[package]
name = "store-tools-installer"
version = "0.10.0"
edition = "2021"
authors = ["AHQ Store"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader = "0.2.7"
is_elevated = "0.1.2"
reqwest = {version ="0.11.18", features=["json", "blocking"]}
serde = {version="1.0.163", features=["serde_derive"]}